--- a/prototipos-html-biblioteca/minha-conta.html
+++ b/prototipos-html-biblioteca/minha-conta.html
@@ -13,10 +13,10 @@
   <body>
     <div class="container-fluid">
     	<div class="row">
-    		<div class="col-md-12">
-          <h3>Bem vind@ de volta, {{nome}}</h3>
+    		<div class="col-md-6">
+          	<h3>Bem vind@ de volta, {{nome}}</h3>
 
-          <h5>Empréstimos recentes</h5>
+          	<h5>Empréstimos recentes</h5>
             <ul>
       				<li class="list-item">
       				  {{Livro1}}
@@ -28,6 +28,13 @@
       					{{Livro3}}
       				</li>
   			    </ul>
+			</div>
+			
+			<div class="col-md-6">
+
+    			<button type="button" class="btn btn-success mt-3">
+    				Atualizar cadastro
+    			</button>
     		</div>
     	</div>
 
